--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           <style>
             hr {
             border: 3px solid #79C61E;
-            width: 50%;
+            width: 300;
             margin: 20px 0;
             }
           </style>
@@ -52,6 +52,8 @@
       
   <h2 id="About" style="color: black; font-family: Capriola">About</h2>
   <hr>
+  
+  <img src="img_5265.jpg" alt="Personal Headshot" style="width:500px;height:600px;">
     
   <p style="color: black; font-size: 34px; font-family: Aleo">My name is Areeba Shaikh and I’m a digital designer based in the Waterloo Region.
   I am currently studying Global Business and Digital Arts at the University of Waterloo, where my degree has a central focus on digital design.
