--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <h2 id="About" style="color: black; font-family: Capriola">About</h2>
   <hr>
   
-  <img src="img_5265.jpg" alt="Personal Headshot" style="width:500px;height:600px;">
+  <img src="976F4BEF-0F5A-4124-B340-1AA70B961ED5.jpeg" alt="Personal Headshot" style="width:400px;height:540px;">
     
   <p style="color: black; font-size: 34px; font-family: Aleo">My name is Areeba Shaikh and I’m a digital designer based in the Waterloo Region.
   I am currently studying Global Business and Digital Arts at the University of Waterloo, where my degree has a central focus on digital design.
