--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   
   <h3 style="color: black; font-family: Bhavuka">Stream Me</h3>
   
-  <img src="D7E53201-717A-4B8F-BC2A-D192244EAAEA.jpeg" alt="Stream Me Cover Image" style="width:400px;height:540px;">
+  <img src="D7E53201-717A-4B8F-BC2A-D192244EAAEA.jpeg" alt="Stream Me Cover Image" style="width:400px;height:400px;">
 
   <p style="color: black; width: 750; font-size: 34px; font-family: Aleo; font-style: italic">“Welcome to Stream Me, where entertainment meets convenience.
   Immerse yourself in a world of endless streaming possibilities with our user-friendly mock-up app designed to elevate your viewing experience.
@@ -81,6 +81,11 @@
   
   <h3 style="color: black; font-family: Bhavuka">Flavour Sphere</h3>
   
+  <img src="E809D495-6D76-470F-BDF1-205ADA4F5D62.png" alt="Stream Me Cover Image" style="width:400px;height:400px;">
+  <img src="45F688FC-BB8F-49B9-9016-C7E4FD9BB294.jpeg" alt="Stream Me Cover Image" style="width:180px;height:400px;">
+  <img src="C7B10233-52FA-4DA8-9594-F0A4E25FF20A.jpeg" alt="Stream Me Cover Image" style="width:180px;height:400px;">
+
+    
   <p style="color: black; width: 750; font-size: 34px; font-family: Aleo">We started this journey by identifying the key issues that plagued many existing cooking apps.
   Users often complained about complicated user interfaces, ineffective search functionality, limited customization options, and inconsistent recipe quality.
   It was clear that there was a need for a cooking app that simplifies the user experience and enhances the joy of cooking.
