--- a/index.html
+++ b/index.html
@@ -101,11 +101,10 @@
   <h2 id="Textile II: Spaces" style="color: black; font-family: Capriola">Textile II: Spaces</h2>
   <hr>
 
-  <img src="D7E53201-717A-4B8F-BC2A-D192244EAAEA.jpeg" alt="Textile MagazinePainted Locker Door" style="width:400px;height:400px;">
-  <img src="0b12e891-a911-4afa-8e1a-89f69a881f00_rw_600.jpeg" alt="Textile Magazine Cover" style="width:180px;height:400px;">
-  <img src="5d7f1daf-f717-4584-b1f1-a176c7f6f4b1_rw_600.jpeg" alt="Textile Magazine Page 1" style="width:180px;height:400px;">
-  <img src="5d7f1daf-f717-4584-b1f1-a176c7f6f4b1_rw_600.jpeg" alt="Textile Magazine Page 2" style="width:180px;height:400px;">
-  
+  <img src="IMG_5265.JPG" alt="Textile Magazine Painted Locker Door" style="width:200px;height:400px;">
+  <img src="IMG_5266.JPG" alt="Textile Magazine Cover" style="width:280px;height:400px;">
+  <img src="IMG_5267.JPG" alt="Textile Magazine Page 1" style="width:250px;height:400px;">
+  <img src="IMG_5268.JPG" alt="Textile Magazine Page 2" style="width:250px;height:400px;">
     
   <p style="color: black; width: 750; font-size: 34px; font-family: Aleo">This section is dedicated to a project that began as an upcycling piece, and ended being published in a local arts magazine, Textile Magazine. The idea behind this piece was to use materials we already had, which in this specific case was a locker door from renovations being done at my high school, to create something new. This piece is also representative of originality, as it transforms something standard into a creative piece.</p>
     
