--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
   <img src="IMG_5268.JPG" alt="Textile Magazine Page 2" style="width:250px;height:400px;">
     
   <p style="color: black; width: 750; font-size: 34px; font-family: Aleo">This section is dedicated to a project that began as an upcycling piece, and ended being published in a local arts magazine, Textile Magazine. The idea behind this piece was to use materials we already had, which in this specific case was a locker door from renovations being done at my high school, to create something new. This piece is also representative of originality, as it transforms something standard into a creative piece.</p>
+
+  <a href="https://areebans17.myportfolio.com/">
+    <img src="adobe-portfolio-2522508-2132696.webp" alt="Adobe Portfolio" style="width:42px; height:42px;">
+  </a>
+
+  <a href="mailto:a64shaik@uwaterloo.ca">
+    <img src="purepng.com-mail-iconsymbolsiconsapple-iosiosios-8-iconsios-8-721522596075clftr.png" alt="Email" style="width:42px; height:42px;">
+  </a>
     
   </body>
 </html>
