--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
            
             h1   {color: #2A6F2C; font-size: 32; font-family: Capriola}
             h2   {color: #2A6F2C; font-size: 32; font-family: Capriola}
-            h3	 {color: black; font size: 30; font-family: Bhavuka}
-            h4   {color: black; font size: 30; font-family: Bhavuka}
+            h3	 {color: black; font-size: 28; font-family: Bhavuka; text-align:center;}
+            h4   {color: black; font-size: 28; font-family: Bhavuka; text-align:center;}
             h5   {color: #2A6F2C; font-size: 32; font-family: Capriola}
             
             p    {color: black; width: 750; font-size: 25px; font-family: Aleo}
