--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
   
     <h3>Stream Me</h3>
   
-    <img src="D7E53201-717A-4B8F-BC2A-D192244EAAEA.jpeg" alt="Stream Me Cover Image" style="width:400px;height:400px;">
-    <img src="0b12e891-a911-4afa-8e1a-89f69a881f00_rw_600.jpeg" alt="Stream Me Home Page Image" style="width:180px;height:400px;">
-    <img src="5d7f1daf-f717-4584-b1f1-a176c7f6f4b1_rw_600.jpeg" alt="Stream Me Trailer Page Image" style="width:180px;height:400px;">
+  <div class="center">
+    <img src="D7E53201-717A-4B8F-BC2A-D192244EAAEA.jpeg" alt="Stream Me Cover Image" style="width:300px;height:300px;">
+    <img src="0b12e891-a911-4afa-8e1a-89f69a881f00_rw_600.jpeg" alt="Stream Me Home Page Image" style="width:140px;height:300px;">
+    <img src="5d7f1daf-f717-4584-b1f1-a176c7f6f4b1_rw_600.jpeg" alt="Stream Me Trailer Page Image" style="width:140px;height:300px;">
+  </div>  
     
     <p style="font-style: italic">“Welcome to Stream Me, where entertainment meets convenience.
     Immerse yourself in a world of endless streaming possibilities with our user-friendly mock-up app designed to elevate your viewing experience.
@@ -107,9 +109,11 @@
   
     <h4>Flavour Sphere</h4>
   
-    <img src="E809D495-6D76-470F-BDF1-205ADA4F5D62.png" alt="Flavour Sphere Cover Image" style="width:400px;height:400px;">
-    <img src="45F688FC-BB8F-49B9-9016-C7E4FD9BB294.jpeg" alt="Flavour Sphere Log In Image" style="width:180px;height:400px;">
-    <img src="C7B10233-52FA-4DA8-9594-F0A4E25FF20A.jpeg" alt="Flavour Sphere Recipe Page Image" style="width:180px;height:400px;">
+  <div class="center">
+    <img src="E809D495-6D76-470F-BDF1-205ADA4F5D62.png" alt="Flavour Sphere Cover Image" style="width:300px;height:300px;">
+    <img src="45F688FC-BB8F-49B9-9016-C7E4FD9BB294.jpeg" alt="Flavour Sphere Log In Image" style="width:140px;height:300px;">
+    <img src="C7B10233-52FA-4DA8-9594-F0A4E25FF20A.jpeg" alt="Flavour Sphere Recipe Page Image" style="width:140px;height:300px;">
+  </div>
     
     <p>We started this journey by identifying the key issues that plagued many existing cooking apps.
     Users often complained about complicated user interfaces, ineffective search functionality, limited customization options, and inconsistent recipe quality.
