--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
     <a href="mailto:a64shaik@uwaterloo.ca">
       <img src="purepng.com-mail-iconsymbolsiconsapple-iosiosios-8-iconsios-8-721522596075clftr.png" alt="Email" style="width:42px; height:42px;">
     </a>
+    
+    <a href="https://www.instagram.com/areebasart/">
+      <img src="Instagram_icon.png" alt="Instagram" style="width:42px; height:42px">
+    </a>
   </div> 
     
   </body>
